--- a/index - Copy.html
+++ b/index - Copy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-api-app</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/chat.js" defer></script>
+
     <script src="js/script.js" defer></script>
 </head>
 <body>
@@ -21,11 +21,11 @@
                         </span>
                     <nav id="menu" onclick="closeNow()">
                         <ul>
-                            <li id="s" class="navLink"><a href="https://marvinalivio.github.io/portfolio/index.html">Home</a></li>
-                            <li id="s" class="navLink"><a href="https://marvinalivio.github.io/portfolio/index.html#aboutMe">About Me</a></li>
-                            <li class="navLink"><a href="https://marvinalivio.github.io/portfolio/index.html#skills">Professional Skils</a></li>
-                            <li class="navLink"><a href="https://marvinalivio.github.io/portfolio/index.html#project">Project</a></li> 
-                            <li class="navLink"><a href="https://marvinalivio.github.io/portfolio/index.html#form">Contact</a></li> 
+                            <li id="s" class="navLink"><a href="index.html">Home</a></li>
+                            <li id="s" class="navLink"><a href="#aboutMe">About Me</a></li>
+                            <li class="navLink"><a href="#skills">Professional Skils</a></li>
+                            <li class="navLink"><a href="#project">Project</a></li> 
+                            <li class="navLink"><a href="#form">Contact</a></li> 
                         </ul>
                         <div class="showMobile">
                             <div class="cta">
@@ -84,12 +84,7 @@
     </div>
 </section>
 
-<div class="chat-container">
-    <h4 id="usap">Usap tayo</h4>
-    <div id="chat-box" class="chat-box"></div>
-    <input type="text" id="user-input" placeholder="Type your message...">
-    <button id="send-btn">Send</button>
-</div>
+
 
 </main>
 
